add new product page, back buttons

--- a/add-new-product.html
+++ b/add-new-product.html
@@ -25,19 +25,20 @@
     <div class="btn-group x--pt" role="group" aria-label="Atgal">
         <a href="index.html" type="button" class="btn btn-default x--mv">« Atgal</a>
     </div>
-    <h2>Edit product</h2>
+
+    <h2>Add new product</h2>
     <form>
         <div class="form-group">
             <label for="title">Pavadinimas</label>
-            <input type="text" class="form-control" id="title" value="Levi's Jeans">
+            <input type="text" class="form-control" id="title">
         </div>
         <div class="form-group">
             <label for="manufacturer">Gamintojas</label>
-            <input type="text" class="form-control" id="manufacturer" value="Levi's">
+            <input type="text" class="form-control" id="manufacturer">
         </div>
         <div class="form-group">
             <label for="price">Price</label>
-            <input type="text" class="form-control" id="price" value="45.99EUR">
+            <input type="text" class="form-control" id="price">
         </div>
 
         <div class="form-group">
@@ -53,7 +54,7 @@
 
         <div class="form-group">
             <label for="tags">Žymės</label>
-            <textarea id="tags" class="form-control" rows="3">Džinsai, rūbai, kelnės, mėlyni</textarea>
+            <textarea id="tags" class="form-control" rows="3"></textarea>
         </div>
 
         <button type="submit" class="btn btn-default">Saugoti</button>
