--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 </head>
 
 <body>
-    <div class="header x--ph">
-        <div class="h2 pull-left" style=" margin-top:12px !important">Yzy Shop</div>
-        <div class="btn-group x--pt pull-right" role="group" aria-label="Atgal">
-            <button type="button" class="btn btn-default ">Prisijungti</button>
-        </div>
-    </div>
+    <img src="images/yzy.png" style="margin: auto; display: block"/>
     <div class="container">
         <div class="x--pv">
             <div class="btn btn-primary btn-lg full-width x--mb" id="akropolis">
@@ -37,6 +32,9 @@
             </div>
             <div class="btn btn-primary btn-lg full-width x--mb" id="europa">
                 Europa
+            </div>
+            <div class="btn btn-default btn-lg full-width x--mb" id="load_home">
+                Prisijungti
             </div>
         </div>
 
