--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
 </head>
 
 <body>
-    <div class="header x--ph">
+
+    <div class="container">
         <div class=" pull-left x--pt-s" style="">
             <img src="http://image.spreadshirtmedia.com/image-server/v1/designs/1005142838,width=178,height=178,version=1443549168/YZy.png" alt="Mountain View" class="small-image">
         </div>
         <div class="btn-group x--pt pull-right" role="group" aria-label="Atgal">
             <button type="button" class="btn btn-default ">Prisijungti</button>
         </div>
-    </div>
-    <div class="container">
-
 
     </div>
-    <div class="container">
+    <div class="container x--pt-xl">
         <div class="x--pv">
             <div class="btn btn-primary btn-lg full-width x--mb" id="akropolis">
                 PC Akropolis
