--- a/add-new-product.html
+++ b/add-new-product.html
@@ -23,7 +23,7 @@
 <body>
     <div class="container">
     <div class="btn-group x--pt" role="group" aria-label="Atgal">
-        <a href="index.html" type="button" class="btn btn-default x--mv">« Atgal</a>
+        <a href="product-administration.html" type="button" class="btn btn-default x--mv">« Atgal</a>
     </div>
 
     <h2>Add new product</h2>
