--- a/detailed-search.html
+++ b/detailed-search.html
@@ -20,13 +20,11 @@
     </head>
 
     <body>
-      <div class="container  x--pt">             
-          <a type="button" class="btn btn-default x--mv" href="main-search-window.html">
-            « Atgal
-          </a>
-
 
       <div class="container">
+        <div class="btn-group x--pt" role="group" aria-label="Atgal">
+          <a href="main-search-window.html" type="button" class="btn btn-default x--mv">« Atgal</a>
+        </div>
 
         <h2>Detali paieška</h2>
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
