--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
                 </label>
             </div>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Prisijungti</button>
+            <a href="product-administration.html" class="btn btn-lg btn-primary btn-block" type="submit">Prisijungti</a>
         </form>
     </div>
 
