--- a/product-administration.html
+++ b/product-administration.html
@@ -45,69 +45,69 @@
             <td>Trikotažinės kelnės</td>
             <td>5</td>
             <td>33€</td> 
-            <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+            <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
         </tr> 
         <tr> 
           <th scope="row"><input type="checkbox"/></th>
           <td>Yzy Džinsai</td> 
           <td>15</td>
           <td>62€</td> 
-          <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+          <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
       </tr>
       <tr> 
        <th scope="row"><input type="checkbox"/></th>
        <td>Kebabas</td>
        <td>2</td>
        <td>3.50€</td>
-       <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+       <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
    </tr>
    <tr> 
        <th scope="row"><input type="checkbox"/></th>
        <td>Megztinis</td>
        <td>22</td>
        <td>55€</td>
-       <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+       <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
    </tr>
    <tr> 
        <th scope="row"><input type="checkbox"/></th>
        <td>Volkswagen golf 4</td>
        <td>44</td>
        <td>2€</td>
-       <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+       <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
    </tr>
    <tr> 
        <th scope="row"><input type="checkbox"/></th>
        <td>Lenovo T420</td>
        <td>13</td>
        <td>350€</td>
-       <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+       <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
    </tr>
    <tr> 
        <th scope="row"><input type="checkbox"/></th>
        <td>Pieštukas</td>
        <td>2</td>
        <td>3.50€</td>
-       <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+       <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
    </tr>
    <tr> 
        <th scope="row"><input type="checkbox"/></th>
        <td>Sibiro Haskis</td>
        <td>1</td>
        <td>3000€</td>
-       <td><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></td>
+       <td><a href="edit-product.html"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
    </tr>
 </tbody> 
 </table>
 
-<button type="button " class="btn btn-default btn-lg  pull-left x--mr">
+<button type="button " class="btn btn-default btn-lg full-width x--mb pull-left x--mr">
     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
     Ištrinti pasirinkimus
 </button>
 
-<button type="button " class="btn btn-default btn-lg pull-left x--mr">
+<a href="add-new-product.html" type="button " class="btn btn-default btn-lg full-width pull-left x--mr">
     <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
     Įvesti naują
-</button>
+</a>
 <nav class="">
   <ul class="pagination  x--mt-s">
     <li class="disabled">
