align all the shit

--- a/navigate.html
+++ b/navigate.html
@@ -22,37 +22,30 @@
 <body>
 
     <div class="container x--pt">
-     <div class="btn-group" role="group" aria-label="Atgal">
-        <a type="button" class="btn btn-default x--mv" href="main-search-window.html">« Atgal</a>
+        <div class="btn-group" role="group" aria-label="Atgal">
+            <a type="button" class="btn btn-default x--mv" href="main-search-window.html">« Atgal</a>
+        </div>
+
+        <h2 class="form-signin-heading">Navigacija - Akropolis</h2>
+        <div class="flexible-container">
+            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="645" height="443" src="https://maps.google.com/maps?hl=en&q=Ozo g. 25&ie=UTF8&t=roadmap&z=12&iwloc=B&output=embed">
+
+                <div>
+
+                    <small>
+                        <a href="http://embedgooglemaps.com">embedgooglemaps.com</a></small>
+                </div>
+                <div>
+                    <small><a href="http://buyproxies.io/">private proxy</a>
+                    </small>
+                </div>
+            </iframe>
+        </div>
     </div>
-
-    <h2 class="form-signin-heading">Navigacija - Akropolis</h2>
-
-
-    <div class="flexible-container">
-
-
-        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="645" height="443" src="https://maps.google.com/maps?hl=en&q=Ozo g. 25&ie=UTF8&t=roadmap&z=12&iwloc=B&output=embed">
-
-            <div>
-
-                <small>
-                    <a href="http://embedgooglemaps.com">embedgooglemaps.com</a></small></div><div><small><a href="http://buyproxies.io/">private proxy</a>
-                </small>
-            </div>
-        </iframe>
-
-    </div>
-</div>
-
-
-
-
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
