--- a/index.html
+++ b/index.html
@@ -24,52 +24,53 @@
 
     <div class="container">
 
-    <img src="images/yzy.png" style="margin: auto; display: block"/>    <div class="container">
+        <img src="images/yzy.png" style="margin: auto; display: block" />
+        <div class="container">
 
-    </div>
-    <div class="container">
-        <div class="x--pv">
-            <div class="btn btn-primary btn-lg full-width x--mb" id="akropolis">
-                PC Akropolis
-            </div>
-            <div class="btn btn-primary btn-lg full-width x--mb" id="panorama">
-                Panorama
-            </div>
-            <div class="btn btn-primary btn-lg full-width x--mb" id="europa">
-                Europa
-            </div>
-            <div class="btn btn-default btn-lg full-width x--mb" id="load_home">
-                Prisijungti
-            </div>
         </div>
+        <div class="container">
+            <div class="x--pv">
+                <div class="btn btn-primary btn-lg full-width x--mb" id="akropolis">
+                    PC Akropolis
+                </div>
+                <div class="btn btn-primary btn-lg full-width x--mb" id="panorama">
+                    Panorama
+                </div>
+                <div class="btn btn-primary btn-lg full-width x--mb" id="europa">
+                    Europa
+                </div>
+                <div class="btn btn-default btn-lg full-width x--mb" id="load_home">
+                    Prisijungti
+                </div>
+            </div>
 
 
-    </div>
-    <div class="footer">
+        </div>
+        <div class="footer">
 
-    </div>
-    <!-- /.container -->
+        </div>
+        <!-- /.container -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
 
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $("#load_home").on("click", function() {
-                window.location.href = "login.html";
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $("#load_home").on("click", function() {
+                    window.location.href = "login.html";
+                });
+
+                $("#akropolis").on("click", loadMainPage);
+                $("#panorama").on("click", loadMainPage);
+                $("#europa").on("click", loadMainPage);
+
+                function loadMainPage() {
+                    window.location.href = "main-search-window.html";
+                }
             });
-
-            $("#akropolis").on("click", loadMainPage);
-            $("#panorama").on("click", loadMainPage);
-            $("#europa").on("click", loadMainPage);
-
-            function loadMainPage() {
-                window.location.href = "main-search-window.html";
-            }
-        });
-    </script>
+        </script>
 </body>
 
 </html>
