--- a/add-new-product.html
+++ b/add-new-product.html
@@ -57,7 +57,7 @@
             <textarea id="tags" class="form-control" rows="3"></textarea>
         </div>
 
-        <button type="submit" class="btn btn-default">Saugoti</button>
+        <a href="product-administration.html" type="submit" class="btn btn-default">Saugoti</a>
     </form>
     </div>
 
