--- a/edit-product.html
+++ b/edit-product.html
@@ -56,7 +56,7 @@
             <textarea id="tags" class="form-control" rows="3">Džinsai, rūbai, kelnės, mėlyni</textarea>
         </div>
 
-        <button type="submit" class="btn btn-default">Saugoti</button>
+        <a href="product-administration.html" type="submit" class="btn btn-default">Saugoti</a>
     </form>
     </div>
 
