--- a/comment-rate.html
+++ b/comment-rate.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="btn-group x--pt" role="group" aria-label="Atgal">
-            <button type="button" class="btn btn-default x--mv">« Atgal</button>
+            <a type="button" class="btn btn-default x--mv"  href="feedback.html">« Atgal</a>
         </div>
 
         <h2 class="form-signin-heading">Palikite atsiliepimą</h2>
@@ -36,7 +36,7 @@
 
             <br/>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Pateikti atsiliepimą</button>
+            <a href="feedback.html" class="btn btn-lg btn-primary btn-block" type="submit">Pateikti atsiliepimą</a>
 
         </form>
     </div>
