--- a/feedback.html
+++ b/feedback.html
@@ -15,9 +15,12 @@
         <div class="row">
             <div class="col-md-12">
 
-                <div class="btn-group x--pt" role="group" aria-label="Atgal">
+                <div class=" x--pt" role="group" aria-label="Atgal">
                     <a href="results-window.html" type="button" class="btn btn-default x--mv">« Atgal</a>
+
+                    <a href="comment-rate.html" type="button" class="pull-right btn btn-default x--mv"> Komentuoti</a>
                 </div>
+
                 <h2 class="">Atsiliepimai</h2>
                 <div class="container x--p">
                     <div class="pull-left">
