--- a/add-new-product.html
+++ b/add-new-product.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="btn-group x--pt" role="group" aria-label="Atgal">
-            <a href="index.html" type="button" class="btn btn-default x--mv">« Atgal</a>
+            <a href="product-administration.html" type="button" class="btn btn-default x--mv">« Atgal</a>
         </div>
         <h2>Add new product</h2>
         <form>
@@ -46,8 +46,8 @@
                 <textarea id="tags" class="form-control" rows="3"></textarea>
             </div>
 
-        <a href="product-administration.html" type="submit" class="btn btn-default">Saugoti</a>
-    </form>
+            <button type="submit" class="btn btn-default">Saugoti</button>
+        </form>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
