--- a/edit-product.html
+++ b/edit-product.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="btn-group x--pt" role="group" aria-label="Atgal">
-            <a href="index.html" type="button" class="btn btn-default x--mv">« Atgal</a>
+            <a href="product-administration.html" type="button" class="btn btn-default x--mv">« Atgal</a>
         </div>
         <h2>Edit product</h2>
         <form>
