--- a/product-administration.html
+++ b/product-administration.html
@@ -14,7 +14,7 @@
 
     <div class="container  x--pt">
         <div class="btn-group" role="group" aria-label="Atgal">
-            <button type="button" class="btn btn-default x--mv" onclick="window.location.href = 'index.html'">« Atgal</button>
+            <button type="button" class="btn btn-default x--mv" onclick="window.location.href = 'index.html'">« Logout</button>
         </div>
 
         <h2>Prekių administravimas</h2>
@@ -39,7 +39,7 @@
                     <td>5</td>
                     <td>33€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
                 <tr>
@@ -50,7 +50,7 @@
                     <td>15</td>
                     <td>62€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
                 <tr>
@@ -61,7 +61,7 @@
                     <td>2</td>
                     <td>3.50€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
                 <tr>
@@ -72,7 +72,7 @@
                     <td>22</td>
                     <td>55€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
                 <tr>
@@ -83,7 +83,7 @@
                     <td>44</td>
                     <td>2€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
                 <tr>
@@ -94,7 +94,7 @@
                     <td>13</td>
                     <td>350€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
                 <tr>
@@ -105,7 +105,7 @@
                     <td>2</td>
                     <td>3.50€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
                 <tr>
@@ -116,7 +116,7 @@
                     <td>1</td>
                     <td>3000€</td>
                     <td>
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <a href="edit-product.html" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                     </td>
                 </tr>
             </tbody>
@@ -127,10 +127,10 @@
             Ištrinti pasirinkimus
         </button>
 
-        <button type="button " class="btn btn-default btn-lg pull-left x--mr">
+        <a href="add-new-product.html" type="button " class="btn btn-default btn-lg pull-left x--mr">
             <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
             Įvesti naują
-        </button>
+        </a>
         <nav class="">
             <ul class="pagination  x--mt-s">
                 <li class="disabled">
