--- a/results-window.html
+++ b/results-window.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container x--pv">
 		<div class="btn-group" role="group" aria-label="Atgal">
 			<a type="button" class="btn btn-default x--mv" href="main-search-window.html">
     			« Atgal
